# home_work_2_1

./: README.md  pyproject.toml
dedalus_project/: bot.py  classes.py
diagrame_UML/: assistant.drawio
