[tool.poetry]
name = "dedalus-project"
version = "0.1.1"
description = "Dedalus personal assistant that works with contacts and notes"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
